Fixed for integration as third-party package and cleaned up a bit

--- a/dicomdj/templates/dicom/instances/instance_list.html
+++ b/dicomdj/templates/dicom/instances/instance_list.html
@@ -30,7 +30,7 @@
                         <a href="{% url 'patient_detail' dcm.patient.id %}">
                             {{ dcm.patient.id }}
                         </a>
-                        ({{ dcm.patient.patient_uid }})
+                        ({{ dcm.patient.patient_id }})
                     </td>
                     <td>
                         <a href="{% url 'series_detail' dcm.series.id %}">
