--- a/dicomdj/templates/dicom/patients/patient_list.html
+++ b/dicomdj/templates/dicom/patients/patient_list.html
@@ -20,7 +20,7 @@
                             {{ patient.id }}
                         </a>
                     </td>
-                    <td>{{ patient.patient_uid }}</td>
+                    <td>{{ patient.patient_id }}</td>
                     <td>{{ patient.get_name_id }}</td>
                     <td>{{ patient.sex.capitalize }}</td>
                     <td>{{ patient.date_of_birth | date:"SHORT_DATE_FORMAT" }}</td>
