--- a/django_dicom/templates/dicom/patients/patient_list.html
+++ b/django_dicom/templates/dicom/patients/patient_list.html
@@ -16,7 +16,7 @@
             {% for patient in object_list %}
                 <tr>
                     <td>
-                        <a href="{% url 'patient_detail' patient.id %}">
+                        <a href="{% url 'dicom:patient_detail' patient.id %}">
                             {{ patient.id }}
                         </a>
                     </td>
