Refactored data import flow from signals to an external controller and added a bunch of docstrings

--- a/django_dicom/templates/dicom/instances/instance_list.html
+++ b/django_dicom/templates/dicom/instances/instance_list.html
@@ -1,7 +1,7 @@
 {% extends "research/data/data_nav.html" %}
 
 {% block data-content %}
-    <h3>DICOM Instances</h3>
+    <h3>DICOM Images</h3>
     <table class="table table-hover table-sm">
         <thead>
             <tr>
