--- a/django_dicom/templates/dicom/series/series_detail.html
+++ b/django_dicom/templates/dicom/series/series_detail.html
@@ -17,7 +17,7 @@
         </a>
     </p>
     <hr>
-    <h4>Instances</h4>
+    <h4>Images</h4>
     <table class="table table-striped table-bordered table-sm" id="instance_table">
         <thead>
             <tr>
